# conc2RDF

./: .gitignore  LICENSE  README.md  code_analysis.ipynb  dev.ipynb  load_data.py  main.py  main_ver2.py  model.pth  namestypls_dataclasses_dict.ipynb  pyproject.toml  with_filter.py
docs/source/: conf.py  index.rst
src/: main.py  quickstart.ipynb  run_several_samples.py  simple.py  testtoml.toml  toml_to_job.py
src/conc2RDF/: __init__.py  analyzer.py  callbacks.py  config.py  config_loader_toml.py  default_config.toml  defaulttoml.toml  file_reader.py  filereader.py  flag_reader.py  logger.py  neural_network.py  rdf_dataset.py  test.toml  toml_to_job.py  utils.py  validator.py
tests/: test_functions.py
training_data/: rdf100bu.xvg  rdf10bu.xvg  rdf20bu.xvg  rdf30bu.xvg  rdf40bu.xvg  rdf50bu.xvg  rdf60bu.xvg  rdf70bu.xvg  rdf80bu.xvg  rdf90bu.xvg
